package com.company;

import com.company.objects.UserInterface;

public class Main {

    public static void main(String[] args) {
        // write your code here
        UserInterface userInterface = new UserInterface();
        userInterface.launchApplication();
    }
}
