@startuml

class Book{
- String : m_sTitle
- String : m_sAuthor
- String : m_sIndex
- String : m_sType
--
constructor()
==
+ getBookIndex()
+ getBookTitle()
+ getBookType()
--
+ setBookAuthor()
+ setBookIndex()
+ setBookTitle()
+ setBookType()
}

Book "0..*" --* "1 " Library

class Library{
- ArrayList <Book> m_aBookListArray
==
+ getAllBooks();
+ addBook();
+ getBookStartWith(String : "A")
+ getAllOddIndexedBook();
- isIndexAvailable();
--
+ getBookListArray();
--
+ setBookListArray();
}

class UserInterface{
+ addSomeBook();
+ askOddIndexedBook();
+ askTitleStartWithLetter(String :query);
+ askAllBooks();
}

class Roman extends Book{
constructor()
}

class Thriller extends Book {
constructor()
}

class Cartoon extends Book{
constructor()
}

class Main{

}

UserInterface  - Library
UserInterface -- Main
@enduml